crates/rspyts-macros/tests/ui/serde_untagged.stderr
error: unsupported Serde attribute `untagged` on this type; rspyts can reflect only `rename`, `rename_all`, `tag`, `transparent`, and `deny_unknown_fields`. Use `rspyts::Json` for a deliberately schemaless custom wire contract
 --> tests/ui/serde_untagged.rs:6:9
  |
6 | #[serde(untagged)]
  |         ^^^^^^^^
